--- a/assets/style.css
+++ b/assets/style.css
@@ -26,11 +26,27 @@ body {
     margin: 0 auto;
 }
 
+.header-title-inverse {
+    color: #222222;
+    font-size: 48px;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 auto;
+}
+
 .header-description {
     color: #CFCFCF;
     margin: 4px auto;
     text-align: center;
     max-width: 384px;
+}
+
+.header-description-inverse {
+    color: #2b2b2b;
+    margin: 4px auto;
+    text-align: center;
+    max-width: 384px;
+    padding-bottom: 34px;
 }
 
 .wrapper {
@@ -43,8 +59,20 @@ body {
 }
 
 .card {
+    margin-top: 24px;
     margin-bottom: 24px;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
+}
+
+.row {
+    max-width: 1024px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.column {
+    flex: 1;
+    padding: 10px;
 }
 
 .menu {
@@ -53,6 +81,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     padding-top: 24px;
+    padding-bottom: 24px;
     margin: -20px auto 0 auto;
     background-color: #FFFFFF;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
